--- a/DemoExperimentos/DemoService/App.config
+++ b/DemoExperimentos/DemoService/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ExperimentosEntities" connectionString="metadata=res://*/DemoExperimentosModel.csdl|res://*/DemoExperimentosModel.ssdl|res://*/DemoExperimentosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A4F4P5S;initial catalog=Experimentos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ExperimentosEntities" connectionString="metadata=res://*/DemoExperimentosModel.csdl|res://*/DemoExperimentosModel.ssdl|res://*/DemoExperimentosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=;initial catalog=Experimentos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
