--- a/DemoExperimentos/DemoUnitTest/App.config
+++ b/DemoExperimentos/DemoUnitTest/App.config
@@ -6,7 +6,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="ExperimentosEntities" connectionString="metadata=res://*/DemoExperimentosModel.csdl|res://*/DemoExperimentosModel.ssdl|res://*/DemoExperimentosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A4F4P5S;initial catalog=Experimentos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ExperimentosEntities" connectionString="metadata=res://*/DemoExperimentosModel.csdl|res://*/DemoExperimentosModel.ssdl|res://*/DemoExperimentosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=;initial catalog=Experimentos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
